# whisper-speech-recognition

./: 404.html  README.md  foo.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  transcribe_demo.py
doc1/: index.html
doc2/: index.html
doc3/: index.html
docs/: doc1.md  doc2.md  doc3.md  how-to-guides.md  index.md  my_page.md  reference.md
explanation/: index.html
how-to-guides/: index.html
my_page/: index.html
reference/: index.html
search/: search_index.json
tests/: test_whisper_speech_recognition.py
tutorials/: index.html
whisper_speech_recognition/: __init__.py  my_module.py  transcribe_demo.py
